--- a/order-tracking.html
+++ b/order-tracking.html
@@ -1475,43 +1475,43 @@
     <!-- Footer Section End -->
 
     <!-- latest jquery-->
-    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/jquery-3.6.0.min.js"></script>
 
     <!-- jquery ui-->
-    <script src="../assets/js/jquery-ui.min.js"></script>
+    <script src="assets/js/jquery-ui.min.js"></script>
 
     <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="../assets/js/bootstrap/bootstrap-notify.min.js"></script>
-    <script src="../assets/js/bootstrap/popper.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap/bootstrap-notify.min.js"></script>
+    <script src="assets/js/bootstrap/popper.min.js"></script>
 
     <!-- feather icon js-->
-    <script src="../assets/js/feather/feather.min.js"></script>
-    <script src="../assets/js/feather/feather-icon.js"></script>
+    <script src="assets/js/feather/feather.min.js"></script>
+    <script src="assets/js/feather/feather-icon.js"></script>
 
     <!-- Lazyload Js -->
-    <script src="../assets/js/lazysizes.min.js"></script>
+    <script src="assets/js/lazysizes.min.js"></script>
 
     <!-- Slick js-->
-    <script src="../assets/js/slick/slick.js"></script>
-    <script src="../assets/js/slick/slick-animation.min.js"></script>
-    <script src="../assets/js/custom-slick-animated.js"></script>
-    <script src="../assets/js/slick/custom_slick.js"></script>
+    <script src="assets/js/slick/slick.js"></script>
+    <script src="assets/js/slick/slick-animation.min.js"></script>
+    <script src="assets/js/custom-slick-animated.js"></script>
+    <script src="assets/js/slick/custom_slick.js"></script>
 
     <!-- Price Range Js -->
-    <script src="../assets/js/ion.rangeSlider.min.js"></script>
+    <script src="assets/js/ion.rangeSlider.min.js"></script>
 
     <!-- sidebar open js -->
-    <script src="../assets/js/filter-sidebar.js"></script>
+    <script src="assets/js/filter-sidebar.js"></script>
 
     <!-- Zoom Js -->
-    <script src="../assets/js/jquery.elevatezoom.js"></script>
-    <script src="../assets/js/zoom-filter.js"></script>
+    <script src="assets/js/jquery.elevatezoom.js"></script>
+    <script src="assets/js/zoom-filter.js"></script>
 
     <!-- script js -->
-    <script src="../assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <!-- theme setting js -->
-    <script src="../assets/js/theme-setting.js"></script>
+    <script src="assets/js/theme-setting.js"></script>
   </body>
 </html>
