--- a/order-success.html
+++ b/order-success.html
@@ -1407,6 +1407,16 @@
                       >Contact Us</a
                     >
                   </li>
+                  <li>
+                    <a href="privacy-policy.html" class="text-content"
+                      >Privacy Policy</a
+                    >
+                  </li>
+                  <li>
+                    <a href="terms-conditions.html" class="text-content"
+                      >Terms & Conditions</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
