--- a/about-us.html
+++ b/about-us.html
@@ -178,17 +178,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="right-side">
-                      <a href="contact-us.html" class="delivery-login-box">
-                        <div class="delivery-icon">
-                          <i data-feather="phone-call"></i>
-                        </div>
-                        <div class="delivery-detail">
-                          <h6>24/7 Delivery</h6>
-                          <h5>+91 888 104 2340</h5>
-                        </div>
-                      </a>
-                    </li>
+
                     <li class="right-side">
                       <a
                         href="wishlist.html"
@@ -1575,7 +1565,7 @@
     <!-- Review Section End -->
 
     <!-- Footer Section Start -->
-    <footer class="section-t-space">
+    <footer class="">
       <div class="container-fluid-lg">
         <div class="service-section">
           <div class="row g-3">
