--- a/index.html
+++ b/index.html
@@ -178,17 +178,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="right-side">
-                      <a href="contact-us.html" class="delivery-login-box">
-                        <div class="delivery-icon">
-                          <i data-feather="phone-call"></i>
-                        </div>
-                        <div class="delivery-detail">
-                          <h6>24/7 Delivery</h6>
-                          <h5>+91 888 104 2340</h5>
-                        </div>
-                      </a>
-                    </li>
+
                     <li class="right-side">
                       <a
                         href="wishlist.html"
@@ -937,7 +927,7 @@
     <!-- Header End -->
 
     <!-- mobile fix menu start -->
-    <div class="mobile-menu d-md-none d-block mobile-cart">
+    <div class="mobile-menu d-md-none d-block mobile-cart section-b-space">
       <ul>
         <li class="active">
           <a href="index.html">
@@ -978,11 +968,13 @@
     <!-- mobile fix menu end -->
 
     <!-- Home Section Start -->
-    <section class="home-section-2 home-section-bg pt-0 overflow-hidden">
+    <section
+      class="home-section-2 home-section-bg pt-0 overflow-hidden section-b-space"
+    >
       <div class="container-fluid p-0 ratio_27">
         <div class="row">
           <div class="col-12">
-            <div class="slider-animate skeleton-banner-xl">
+            <div class="slider-animate skeleton-banner-xl slider">
               <div>
                 <div
                   class="h-100 bg-size"
@@ -991,13 +983,30 @@
                     background-size: cover;
                     background-position: center center;
                     background-repeat: no-repeat;
-                    display: block;
                   "
                 >
                   <img
                     src="assets/images/banner/1.jpg"
                     class="bg-img"
-                    alt=""
+                    alt="Banner 1"
+                    style="display: none"
+                  />
+                </div>
+              </div>
+              <div>
+                <div
+                  class="h-100 bg-size"
+                  style="
+                    background-image: url('assets/images/banner/home-banner.jpg');
+                    background-size: cover;
+                    background-position: center center;
+                    background-repeat: no-repeat;
+                  "
+                >
+                  <img
+                    src="assets/images/banner/home-banner.jpg"
+                    class="bg-img"
+                    alt="Banner 2"
                     style="display: none"
                   />
                 </div>
@@ -1007,10 +1016,11 @@
         </div>
       </div>
     </section>
+
     <!-- Home Section End -->
 
     <!-- Banner Section Start -->
-    <section class="banner-section ratio_60 wow fadeInUp">
+    <section class="banner-section ratio_60 wow fadeInUp section-b-space">
       <div class="container-fluid-lg">
         <div class="banner-slider">
           <div>
@@ -1094,121 +1104,145 @@
     <!-- Banner Section End -->
 
     <!-- Product Section Start -->
-    <section class="product-section">
+    <section class="product-section section-b-space">
       <div class="container-fluid-lg">
         <div class="row g-sm-4 g-3">
           <div class="col-xxl-3 col-xl-4 d-none d-xl-block">
-            <div class="p-sticky">
-              <div class="category-menu">
-                <h3>Category</h3>
-                <ul>
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/cat/1.png"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html">MOUNTAIN BIKES</a>
-                      </h5>
-                    </div>
-                  </li>
+            <div class="ratio_156">
+              <div
+                class="banner-contain-2 hover-effect bg-size blur-up lazyloaded"
+                style="
+                  background-image: url('assets/images/fashion/banner/3.jpg');
+                  background-size: cover;
+                  background-position: center center;
+                  background-repeat: no-repeat;
+                  display: block;
+                "
+              >
+                <img
+                  src="assets/images/banner/1.jpg"
+                  class="bg-img blur-up lazyload"
+                  alt=""
+                  style="display: none"
+                />
+                <div
+                  class="banner-detail-2 p-bottom-center text-center home-p-medium"
+                >
+                  <div>
+                    <div class="category-menu">
+                      <h3 style="font-size: 16px; color: #000">Category</h3>
+                      <ul>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/cat/1.png"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html">MOUNTAIN BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
 
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/cat/2.png"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html">HYBRID BIKES</a>
-                      </h5>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/cat/2.png"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html">HYBRID BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/19.png"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html">ROAD BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/20.png"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html">ELECTRIC BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/21.png"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html"> FAT BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/22.avif"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html"> WOMEN BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/23.avif"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html"> MEN BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="category-list">
+                            <img
+                              src="assets/images/icon/24.webp"
+                              class="blur-up lazyload"
+                              alt=""
+                            />
+                            <h5 style="font-size: 12px">
+                              <a href="product-list.html"> KIDS BIKES</a>
+                            </h5>
+                          </div>
+                        </li>
+                      </ul>
+                      <ul>
+                        <li class="text-center p-4">
+                          <a href="" class="btn btn-theme-outline btn-sm"
+                            >View All &nbsp; <i class="bi bi-arrow-right"></i
+                          ></a>
+                        </li>
+                      </ul>
                     </div>
-                  </li>
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/19.png"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html">ROAD BIKES</a>
-                      </h5>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/20.png"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html">ELECTRIC BIKES</a>
-                      </h5>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/21.png"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html"> FAT BIKES</a>
-                      </h5>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/22.avif"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html"> WOMEN BIKES</a>
-                      </h5>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/23.avif"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html"> MEN BIKES</a>
-                      </h5>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="category-list">
-                      <img
-                        src="assets/images/icon/24.webp"
-                        class="blur-up lazyload"
-                        alt=""
-                      />
-                      <h5>
-                        <a href="product-list.html"> KIDS BIKES</a>
-                      </h5>
-                    </div>
-                  </li>
-                </ul>
-                <ul>
-                  <li class="text-center p-4">
-                    <a href="" class="btn btn-theme-outline btn-sm"
-                      >View All &nbsp; <i class="bi bi-arrow-right"></i
-                    ></a>
-                  </li>
-                </ul>
+                  </div>
+                </div>
               </div>
-
+            </div>
+            <div class="p-sticky">
               <div class="section-t-space">
                 <div class="category-menu">
                   <h3>Customer Comment</h3>
@@ -2953,7 +2987,7 @@
 
             <div class="section-t-space section-b-space">
               <div class="row g-md-4 g-3">
-                <div class="col-xxl-8 col-xl-12 col-md-7">
+                <div class="col-xxl-12 col-xl-12 col-md-12">
                   <div class="banner-contain hover-effect">
                     <img
                       src="assets/images/banner/2.jpg"
@@ -2996,7 +3030,9 @@
               <p>Top Brands Of The Week</p>
             </div>
 
-            <div class="category-slider-2 product-wrapper no-arrow">
+            <div
+              class="category-slider-2 product-wrapper no-arrow section-b-space"
+            >
               <div>
                 <a href="product-list.html" class="category-box category-dark">
                   <div>
@@ -3148,7 +3184,9 @@
               </div>
             </div>
 
-            <div class="best-selling-slider product-wrapper wow fadeInUp">
+            <div
+              class="best-selling-slider product-wrapper wow fadeInUp section-b-space"
+            >
               <div>
                 <ul class="product-list">
                   <li>
@@ -3892,7 +3930,7 @@
               </div>
             </div>
 
-            <div class="section-t-space">
+            <div class="section-b-space">
               <div class="banner-contain hover-effect">
                 <img
                   src="assets/images/banner/slider1.jpg"
@@ -3919,7 +3957,7 @@
               </div>
             </div>
 
-            <div class="title section-t-space">
+            <div class="title section-b-space">
               <h2>Featured Blog</h2>
               <span class="title-leaf">
                 <img
@@ -4088,7 +4126,7 @@
     <!-- Newsletter Section End -->
 
     <!-- Footer Section Start -->
-    <footer class="section-t-space">
+    <footer class="">
       <div class="container-fluid-lg">
         <div class="service-section">
           <div class="row g-3">
