--- a/login.html
+++ b/login.html
@@ -178,17 +178,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="right-side">
-                      <a href="contact-us.html" class="delivery-login-box">
-                        <div class="delivery-icon">
-                          <i data-feather="phone-call"></i>
-                        </div>
-                        <div class="delivery-detail">
-                          <h6>24/7 Delivery</h6>
-                          <h5>+91 888 104 2340</h5>
-                        </div>
-                      </a>
-                    </li>
+
                     <li class="right-side">
                       <a
                         href="wishlist.html"
@@ -1126,6 +1116,328 @@
       </div>
     </section>
     <!-- log in section end -->
+
+    <!-- Footer Section Start -->
+    <footer class="">
+      <div class="container-fluid-lg">
+        <div class="service-section">
+          <div class="row g-3">
+            <div class="col-12">
+              <div class="service-contain">
+                <div class="service-box">
+                  <div class="service-image">
+                    <img
+                      src="assets/svg/delivery.svg"
+                      class="blur-up lazyload"
+                      alt=""
+                    />
+                  </div>
+
+                  <div class="service-detail">
+                    <h5>44,000+ Cycles Sold Online</h5>
+                  </div>
+                </div>
+
+                <div class="service-box">
+                  <div class="service-image">
+                    <img
+                      src="assets/svg/delivery.svg"
+                      class="blur-up lazyload"
+                      alt=""
+                    />
+                  </div>
+
+                  <div class="service-detail">
+                    <h5>Free Delivery For Order Over ₹.5000</h5>
+                  </div>
+                </div>
+
+                <div class="service-box">
+                  <div class="service-image">
+                    <img
+                      src="assets/svg/discount.svg"
+                      class="blur-up lazyload"
+                      alt=""
+                    />
+                  </div>
+
+                  <div class="service-detail">
+                    <h5>Daily Mega Discounts</h5>
+                  </div>
+                </div>
+
+                <div class="service-box">
+                  <div class="service-image">
+                    <img
+                      src="assets/svg/market.svg"
+                      class="blur-up lazyload"
+                      alt=""
+                    />
+                  </div>
+
+                  <div class="service-detail">
+                    <h5>Best Price On The Market</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main-footer section-b-space section-t-space">
+          <div class="row g-md-4 g-3">
+            <div class="col-xl-3 col-lg-4 col-sm-6">
+              <div class="footer-logo">
+                <div class="theme-logo">
+                  <a href="index.html">
+                    <img
+                      src="assets/images/logo/logo.png"
+                      class="blur-up lazyload"
+                      alt=""
+                    />
+                  </a>
+                </div>
+
+                <div class="footer-logo-contain">
+                  <p>
+                    ChooseMyBicycle.com is an e-commerce portal exclusive for
+                    buying bicycles, accessories and apparels.
+                  </p>
+
+                  <ul class="address">
+                    <li>
+                      <i data-feather="home"></i>
+                      <a href="javascript:void(0)"
+                        >pune | MH | India :- 411111</a
+                      >
+                    </li>
+                    <li>
+                      <i data-feather="mail"></i>
+                      <a href="javascript:void(0)"
+                        >support@thebicyclestore.com</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
+              <div class="footer-title">
+                <h4>Categories</h4>
+              </div>
+
+              <div class="footer-contain">
+                <ul>
+                  <li>
+                    <a href="product-list.html" class="text-content"
+                      >Mountain Bikes</a
+                    >
+                  </li>
+                  <li>
+                    <a href="product-list.html" class="text-content"
+                      >Hybrid Bikes</a
+                    >
+                  </li>
+                  <li>
+                    <a href="product-list.html" class="text-content"
+                      >Road Bikes</a
+                    >
+                  </li>
+                  <li>
+                    <a href="product-list.html" class="text-content"
+                      >Electric Bikes</a
+                    >
+                  </li>
+                  <li>
+                    <a href="product-list.html" class="text-content"
+                      >Women Bikes</a
+                    >
+                  </li>
+                  <li>
+                    <a href="product-list.html" class="text-content"
+                      >Men Bikes</a
+                    >
+                  </li>
+                  <li>
+                    <a href="product-list.html" class="text-content"
+                      >Kids Bikes</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-xl col-lg-2 col-sm-3">
+              <div class="footer-title">
+                <h4>Useful Links</h4>
+              </div>
+
+              <div class="footer-contain">
+                <ul>
+                  <li>
+                    <a href="index.html" class="text-content">Home</a>
+                  </li>
+                  <li>
+                    <a href="product-list.html" class="text-content">Shop</a>
+                  </li>
+                  <li>
+                    <a href="about-us.html" class="text-content">About Us</a>
+                  </li>
+                  <li>
+                    <a href="blog.html" class="text-content">Blog</a>
+                  </li>
+                  <li>
+                    <a href="contact-us.html" class="text-content"
+                      >Contact Us</a
+                    >
+                  </li>
+                  <li>
+                    <a href="privacy-policy.html" class="text-content"
+                      >Privacy Policy</a
+                    >
+                  </li>
+                  <li>
+                    <a href="terms-conditions.html" class="text-content"
+                      >Terms & Conditions</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-xl-2 col-sm-3">
+              <div class="footer-title">
+                <h4>Help Center</h4>
+              </div>
+
+              <div class="footer-contain">
+                <ul>
+                  <li>
+                    <a href="order-success.html" class="text-content"
+                      >Your Order</a
+                    >
+                  </li>
+                  <li>
+                    <a href="user-dashboard.html" class="text-content"
+                      >Your Account</a
+                    >
+                  </li>
+                  <li>
+                    <a href="order-tracking.html" class="text-content"
+                      >Track Order</a
+                    >
+                  </li>
+                  <li>
+                    <a href="wishlist.html" class="text-content"
+                      >Your Wishlist</a
+                    >
+                  </li>
+                  <li>
+                    <a href="search.html" class="text-content">Search</a>
+                  </li>
+                  <li>
+                    <a href="faq.html" class="text-content">FAQ</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-xl-3 col-lg-4 col-sm-6">
+              <div class="footer-title">
+                <h4>Contact Us</h4>
+              </div>
+
+              <div class="footer-contact">
+                <ul>
+                  <li>
+                    <div class="footer-number">
+                      <i data-feather="phone"></i>
+                      <div class="contact-number">
+                        <h6 class="text-content">Hotline 24/7 :</h6>
+                        <h5>+91 9090909090</h5>
+                      </div>
+                    </div>
+                  </li>
+
+                  <li>
+                    <div class="footer-number">
+                      <i data-feather="mail"></i>
+                      <div class="contact-number">
+                        <h6 class="text-content">Email Address :</h6>
+                        <h5>support@thebicyclestore.com</h5>
+                      </div>
+                    </div>
+                  </li>
+
+                  <li class="social-app mb-0">
+                    <h5 class="mb-2 text-content">Download App :</h5>
+                    <ul>
+                      <li class="mb-0">
+                        <a href="#" target="_blank">
+                          <img
+                            src="assets/images/playstore.svg"
+                            class="blur-up lazyload"
+                            alt=""
+                          />
+                        </a>
+                      </li>
+                      <li class="mb-0">
+                        <a href="#" target="_blank">
+                          <img
+                            src="assets/images/appstore.svg"
+                            class="blur-up lazyload"
+                            alt=""
+                          />
+                        </a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="sub-footer section-small-space">
+          <div class="reserve">
+            <h6 class="text-content">
+              ©2025 The Bicycle Store All rights reserved
+            </h6>
+          </div>
+
+          <div class="payment">
+            <img
+              src="assets/images/payment/1.png"
+              class="blur-up lazyload"
+              alt=""
+            />
+          </div>
+
+          <div class="social-link">
+            <h6 class="text-content">Stay connected :</h6>
+            <ul>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/" target="_blank">
+                  <i class="fa-brands fa-twitter"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer Section End -->
 
     <!-- latest jquery-->
     <script src="assets/js/jquery-3.6.0.min.js"></script>
