--- a/product-details.html
+++ b/product-details.html
@@ -178,17 +178,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="right-side">
-                      <a href="contact-us.html" class="delivery-login-box">
-                        <div class="delivery-icon">
-                          <i data-feather="phone-call"></i>
-                        </div>
-                        <div class="delivery-detail">
-                          <h6>24/7 Delivery</h6>
-                          <h5>+91 888 104 2340</h5>
-                        </div>
-                      </a>
-                    </li>
+
                     <li class="right-side">
                       <a
                         href="wishlist.html"
@@ -1003,7 +993,7 @@
     <!-- Breadcrumb Section End -->
 
     <!-- Product Left Sidebar Start -->
-    <section class="product-section">
+    <section class="product-section section-b-space">
       <div class="container-fluid-lg">
         <div class="row">
           <div class="col-xxl-9 col-xl-9 col-lg-9 wow fadeInUp">
