--- a/product-list.html
+++ b/product-list.html
@@ -178,17 +178,7 @@
                         </div>
                       </div>
                     </li>
-                    <li class="right-side">
-                      <a href="contact-us.html" class="delivery-login-box">
-                        <div class="delivery-icon">
-                          <i data-feather="phone-call"></i>
-                        </div>
-                        <div class="delivery-detail">
-                          <h6>24/7 Delivery</h6>
-                          <h5>+91 888 104 2340</h5>
-                        </div>
-                      </a>
-                    </li>
+
                     <li class="right-side">
                       <a
                         href="wishlist.html"
@@ -1002,7 +992,7 @@
     <!-- Breadcrumb Section End -->
 
     <!-- Poster Section Start -->
-    <section>
+    <section class="section-b-space pt-4">
       <div class="container-fluid-lg">
         <div class="row">
           <div class="col-12">
