--- a/service-details.html
+++ b/service-details.html
@@ -1058,8 +1058,8 @@
                     </ul>
                   </div>
 
-                  <div class="row">
-                    <div class="col-lg-6">
+                  <div class="row gy-5">
+                    <div class="col-lg-6 col-6">
                       <div>
                         <label for="">City</label>
                         <select name="" id="" class="form-control">
@@ -1070,7 +1070,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 col-6">
                       <label for=""> Enter your Pincode</label>
                       <div class="input-group mb-3">
                         <input
