--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
     <!-- Header End -->
 
     <!-- mobile fix menu start -->
-    <div class="mobile-menu d-md-none d-block mobile-cart section-b-space">
+    <div class="mobile-menu d-block mobile-cart section-b-space">
       <ul>
         <li class="active">
           <a href="index.html">
@@ -937,18 +937,18 @@
         </li>
 
         <li class="mobile-category">
-          <a href="javascript:void(0)">
+          <a href="product-list.html">
             <i class="iconly-Category icli js-link"></i>
             <span>Category</span>
           </a>
         </li>
 
-        <li>
+        <!-- <li>
           <a href="search.html" class="search-box">
             <i class="iconly-Search icli"></i>
             <span>Search</span>
           </a>
-        </li>
+        </li> -->
 
         <li>
           <a href="wishlist.html" class="notifi-wishlist">
