--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
     <!-- Header End -->
 
     <!-- mobile fix menu start -->
-    <div class="mobile-menu d-block mobile-cart section-b-space">
+    <div class="mobile-menu d-block d-lg-none mobile-cart section-b-space">
       <ul>
         <li class="active">
           <a href="index.html">
